--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   border-radius: 12px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   padding: 20px;
-  text-align: center;
+  text-align: left;
 }
 
 /* Заголовок */
@@ -33,7 +33,7 @@ body {
   border-radius: 8px 8px 0 0;
   font-size: 20px;
   font-weight: bold;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
 /* Список завдань */
@@ -44,8 +44,9 @@ body {
 /* Кожен пункт списку */
 .tasks-list-item {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  padding: 10px;
+  padding: 12px 15px;
   border-bottom: 1px solid #ddd;
   cursor: pointer;
   transition: 0.3s;
@@ -68,7 +69,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 12px;
   transition: 0.3s;
 }
 
